<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"

    android:padding="8dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarTrackVertical="@color/miColor"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textSize="16sp"
                android:autofillHints=""
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/et_Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textSize="16sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_Rcontrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repcontrasena"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:autofillHints="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Genero:"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_Maculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/masculino"
                    android:textColorHighlight="@color/brown"
                    android:textColorLink="@color/darkgray"
                    tools:ignore="RtlHardcoded" />

                <RadioButton
                    android:id="@+id/rb_Femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/femenino" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hobbies:"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/cb_viajar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_viajar" />

            <CheckBox
                android:id="@+id/cb_leer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_leer" />

            <CheckBox
                android:id="@+id/cb_bailar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_bailar" />

            <CheckBox
                android:id="@+id/cb_cantar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_series" />

            <TextView
                android:id="@+id/tv_fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_fecha"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tvFecha"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="@string/hint_fecha"
                    android:inputType="date"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:autofillHints="" />

                <ImageButton
                    android:id="@+id/iv_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@color/beige"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_lugardenacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Lugar de nacimiento:"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/sp_cuidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:background="@color/deepskyblue"
                android:text="@string/registrarse"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_resultado"
                android:textSize="16sp"

                />


        </LinearLayout>


    </ScrollView>


</LinearLayout>
